force-app/main/default/objects/OpportunityAttachmentLink__c/OpportunityAttachmentLink__c.object-meta.xml
<CustomObject>
    <label>Anexo Externo da Oportunidade</label>
    <nameField>
        <label>Nome de OpportunityAttachmentLink</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Anexos Externo da Oportunidade</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>