force-app/main/default/objects/OpportunityAttachmentLink__c/fields/ActivityName__c.field-meta.xml
<CustomField>
    <fullName>ActivityName__c</fullName>
    <description>Nome da atividade (Subject) que originou o anexo.</description>
    <label>Atividade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>