force-app/main/default/objects/OpportunityAttachmentLink__c/fields/AttachmentDescription__c.field-meta.xml
<CustomField>
    <fullName>AttachmentDescription__c</fullName>
    <label>Descrição do Anexo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>