force-app/main/default/objects/OpportunityAttachmentLink__c/fields/AttachmentURL__c.field-meta.xml
<CustomField>
    <fullName>AttachmentURL__c</fullName>
    <label>URL do Anexo</label>
    <type>Url</type>
</CustomField>