force-app/main/default/objects/OpportunityAttachmentLink__c/fields/CompletedBy__c.field-meta.xml
<CustomField>
    <fullName>CompletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concluído Por</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Anexos Concluídos</relationshipLabel>
    <relationshipName>CompletedBy</relationshipName>
    <type>Lookup</type>
</CustomField>