force-app/main/default/objects/OpportunityAttachmentLink__c/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <label>Data de Conclusão</label>
    <type>DateTime</type>
</CustomField>