force-app/main/default/objects/OpportunityAttachmentLink__c/fields/DocRequiredName__c.field-meta.xml
<CustomField>
    <fullName>DocRequiredName__c</fullName>
    <description>Nome do documento obrigatório associado a este anexo (ActivityRequiredDocument).</description>
    <label>Documento Obrigatório</label>
    <length>255</length>
    <type>Text</type>
</CustomField>