force-app/main/default/objects/OpportunityAttachmentLink__c/fields/InternalAttachmentURL__c.field-meta.xml
<CustomField>
    <fullName>InternalAttachmentURL__c</fullName>
    <label>URL do Anexo Interno</label>
    <type>Url</type>
</CustomField>