force-app/main/default/objects/OpportunityAttachmentLink__c/fields/IsChecklistState__c.field-meta.xml
<CustomField>
    <fullName>IsChecklistState__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifica registros usados para armazenar o estado de conclusão do documento obrigatório.</description>
    <label>É Estado de Checklist</label>
    <type>Checkbox</type>
</CustomField>