force-app/main/default/objects/OpportunityAttachmentLink__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Anexos Externo da Oportunidade</relationshipLabel>
    <relationshipName>Anexos_Externo_da_Oportunidade</relationshipName>
    <type>Lookup</type>
</CustomField>