force-app/main/default/objects/OpportunityAttachmentLink__c/fields/SObjectId__c.field-meta.xml
<CustomField>
    <fullName>SObjectId__c</fullName>
    <description>Id do registro relacionado (Projeto, Instalação, Viabilidade, etc.).</description>
    <label>SObject Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>